gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-2_dg.rs
//@ compile-flags: -Znext-solver
#![allow(incomplete_features)]
#![feature(const_trait_impl, effects)]
//@ revisions: yy yn ny nn

#[cfg_attr(any(yy, yn), const_trait)]
trait Foo {
    fn a(&self);
}

#[cfg_attr(any(yy, ny), const_trait)]
trait Bar: ~const Foo {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
// { dg-error "" "" { target *-*-* } .-4 }

const fn foo<T: Bar>(x: &T) {
    x.a();
// { dg-error "" "" { target *-*-* } .-1 }
    // FIXME(effects) diagnostic
}

fn main() {}

